begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|ServerName
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|TableName
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|classification
operator|.
name|InterfaceAudience
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|ipc
operator|.
name|HBaseRpcController
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|ipc
operator|.
name|RpcControllerFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|ProtobufUtil
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|ClientProtos
operator|.
name|ClientService
import|;
end_import

begin_comment
comment|/**  * Implementations make an rpc call against a RegionService via a protobuf Service.  * Implement #rpcCall(RpcController) and then call {@link #call(int)} to  * trigger the rpc. The {@link #call(int)} eventually invokes your  * #rpcCall(RpcController) meanwhile saving you having to write a bunch of  * boilerplate. The {@link #call(int)} implementation is from {@link RpcRetryingCaller} so rpcs are  * retried on fail.  *  *<p>TODO: this class is actually tied to one region, because most of the paths make use of  *       the regioninfo part of location when building requests. The only reason it works for  *       multi-region requests (e.g. batch) is that they happen to not use the region parts.  *       This could be done cleaner (e.g. having a generic parameter and 2 derived classes,  *       RegionCallable and actual RegionServerCallable with ServerName.  * @param<T> the class that the ServerCallable handles  */
end_comment

begin_class
annotation|@
name|InterfaceAudience
operator|.
name|Private
specifier|public
specifier|abstract
class|class
name|NoncedRegionServerCallable
parameter_list|<
name|T
parameter_list|>
extends|extends
name|AbstractRegionServerCallable
argument_list|<
name|T
argument_list|>
block|{
specifier|private
name|ClientService
operator|.
name|BlockingInterface
name|stub
decl_stmt|;
specifier|private
specifier|final
name|HBaseRpcController
name|rpcController
decl_stmt|;
specifier|private
specifier|final
name|long
name|nonce
decl_stmt|;
comment|/**    * @param connection Connection to use.    * @param tableName Table name to which<code>row</code> belongs.    * @param row The row we want in<code>tableName</code>.    */
specifier|public
name|NoncedRegionServerCallable
parameter_list|(
name|Connection
name|connection
parameter_list|,
name|RpcControllerFactory
name|rpcControllerFactory
parameter_list|,
name|TableName
name|tableName
parameter_list|,
name|byte
index|[]
name|row
parameter_list|)
block|{
name|this
argument_list|(
name|connection
argument_list|,
name|rpcControllerFactory
operator|.
name|newController
argument_list|()
argument_list|,
name|tableName
argument_list|,
name|row
argument_list|)
expr_stmt|;
block|}
specifier|public
name|NoncedRegionServerCallable
parameter_list|(
name|Connection
name|connection
parameter_list|,
name|HBaseRpcController
name|rpcController
parameter_list|,
name|TableName
name|tableName
parameter_list|,
name|byte
index|[]
name|row
parameter_list|)
block|{
name|super
argument_list|(
name|connection
argument_list|,
name|tableName
argument_list|,
name|row
argument_list|)
expr_stmt|;
name|this
operator|.
name|rpcController
operator|=
name|rpcController
expr_stmt|;
name|this
operator|.
name|nonce
operator|=
name|getConnection
argument_list|()
operator|.
name|getNonceGenerator
argument_list|()
operator|.
name|newNonce
argument_list|()
expr_stmt|;
block|}
name|void
name|setClientByServiceName
parameter_list|(
name|ServerName
name|service
parameter_list|)
throws|throws
name|IOException
block|{
name|this
operator|.
name|setStub
argument_list|(
name|getConnection
argument_list|()
operator|.
name|getClient
argument_list|(
name|service
argument_list|)
argument_list|)
expr_stmt|;
block|}
comment|/**    * @return Client Rpc protobuf communication stub    */
specifier|protected
name|ClientService
operator|.
name|BlockingInterface
name|getStub
parameter_list|()
block|{
return|return
name|this
operator|.
name|stub
return|;
block|}
comment|/**    * Set the client protobuf communication stub    * @param stub to set    */
name|void
name|setStub
parameter_list|(
specifier|final
name|ClientService
operator|.
name|BlockingInterface
name|stub
parameter_list|)
block|{
name|this
operator|.
name|stub
operator|=
name|stub
expr_stmt|;
block|}
comment|/**    * Override that changes Exception from {@link Exception} to {@link IOException}. It also does    * setup of an rpcController and calls through to the unimplemented    * call(PayloadCarryingRpcController) method; implement this method to add your rpc invocation.    */
annotation|@
name|Override
specifier|public
name|T
name|call
parameter_list|(
name|int
name|callTimeout
parameter_list|)
throws|throws
name|IOException
block|{
if|if
condition|(
name|this
operator|.
name|rpcController
operator|!=
literal|null
condition|)
block|{
name|this
operator|.
name|rpcController
operator|.
name|reset
argument_list|()
expr_stmt|;
name|this
operator|.
name|rpcController
operator|.
name|setPriority
argument_list|(
name|tableName
argument_list|)
expr_stmt|;
name|this
operator|.
name|rpcController
operator|.
name|setCallTimeout
argument_list|(
name|callTimeout
argument_list|)
expr_stmt|;
block|}
try|try
block|{
return|return
name|call
argument_list|(
name|this
operator|.
name|rpcController
argument_list|)
return|;
block|}
catch|catch
parameter_list|(
name|Exception
name|e
parameter_list|)
block|{
throw|throw
name|ProtobufUtil
operator|.
name|handleRemoteException
argument_list|(
name|e
argument_list|)
throw|;
block|}
block|}
comment|/**    * Run RPC call.    * @param rpcController PayloadCarryingRpcController is a mouthful but it at a minimum is a    * facade on protobuf so we don't have to put protobuf everywhere; we can keep it behind this    * class.    * @throws Exception    */
specifier|protected
specifier|abstract
name|T
name|call
parameter_list|(
name|HBaseRpcController
name|rpcController
parameter_list|)
throws|throws
name|Exception
function_decl|;
specifier|public
name|HBaseRpcController
name|getRpcController
parameter_list|()
block|{
return|return
name|this
operator|.
name|rpcController
return|;
block|}
name|long
name|getNonceGroup
parameter_list|()
block|{
return|return
name|getConnection
argument_list|()
operator|.
name|getNonceGenerator
argument_list|()
operator|.
name|getNonceGroup
argument_list|()
return|;
block|}
name|long
name|getNonce
parameter_list|()
block|{
return|return
name|this
operator|.
name|nonce
return|;
block|}
block|}
end_class

end_unit

