begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|classification
operator|.
name|InterfaceAudience
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|HRegionInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|client
operator|.
name|Result
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|AdminProtos
operator|.
name|CloseRegionResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|AdminProtos
operator|.
name|GetOnlineRegionResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|AdminProtos
operator|.
name|OpenRegionResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|AdminProtos
operator|.
name|RollWALWriterResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|ClientProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|ClientProtos
operator|.
name|ActionResult
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|ClientProtos
operator|.
name|ScanResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|HBaseProtos
operator|.
name|NameBytesPair
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|HBaseProtos
operator|.
name|RegionInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|regionserver
operator|.
name|RegionOpeningState
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|util
operator|.
name|StringUtils
import|;
end_import

begin_import
import|import
name|com
operator|.
name|google
operator|.
name|protobuf
operator|.
name|ByteString
import|;
end_import

begin_comment
comment|/**  * Helper utility to build protocol buffer responses,  * or retrieve data from protocol buffer responses.  */
end_comment

begin_class
annotation|@
name|InterfaceAudience
operator|.
name|Private
specifier|public
specifier|final
class|class
name|ResponseConverter
block|{
specifier|private
name|ResponseConverter
parameter_list|()
block|{   }
comment|// Start utilities for Client
comment|/**    * Get the client Results from a protocol buffer ScanResponse    *    * @param response the protocol buffer ScanResponse    * @return the client Results in the response    */
specifier|public
specifier|static
name|Result
index|[]
name|getResults
parameter_list|(
specifier|final
name|ScanResponse
name|response
parameter_list|)
block|{
if|if
condition|(
name|response
operator|==
literal|null
condition|)
return|return
literal|null
return|;
name|int
name|count
init|=
name|response
operator|.
name|getResultCount
argument_list|()
decl_stmt|;
name|Result
index|[]
name|results
init|=
operator|new
name|Result
index|[
name|count
index|]
decl_stmt|;
for|for
control|(
name|int
name|i
init|=
literal|0
init|;
name|i
operator|<
name|count
condition|;
name|i
operator|++
control|)
block|{
name|results
index|[
name|i
index|]
operator|=
name|ProtobufUtil
operator|.
name|toResult
argument_list|(
name|response
operator|.
name|getResult
argument_list|(
name|i
argument_list|)
argument_list|)
expr_stmt|;
block|}
return|return
name|results
return|;
block|}
comment|/**    * Get the results from a protocol buffer MultiResponse    *    * @param proto the protocol buffer MultiResponse to convert    * @return the results in the MultiResponse    * @throws IOException    */
specifier|public
specifier|static
name|List
argument_list|<
name|Object
argument_list|>
name|getResults
parameter_list|(
specifier|final
name|ClientProtos
operator|.
name|MultiResponse
name|proto
parameter_list|)
throws|throws
name|IOException
block|{
name|List
argument_list|<
name|Object
argument_list|>
name|results
init|=
operator|new
name|ArrayList
argument_list|<
name|Object
argument_list|>
argument_list|()
decl_stmt|;
name|List
argument_list|<
name|ActionResult
argument_list|>
name|resultList
init|=
name|proto
operator|.
name|getResultList
argument_list|()
decl_stmt|;
for|for
control|(
name|int
name|i
init|=
literal|0
init|,
name|n
init|=
name|resultList
operator|.
name|size
argument_list|()
init|;
name|i
operator|<
name|n
condition|;
name|i
operator|++
control|)
block|{
name|ActionResult
name|result
init|=
name|resultList
operator|.
name|get
argument_list|(
name|i
argument_list|)
decl_stmt|;
if|if
condition|(
name|result
operator|.
name|hasException
argument_list|()
condition|)
block|{
name|results
operator|.
name|add
argument_list|(
name|ProtobufUtil
operator|.
name|toException
argument_list|(
name|result
operator|.
name|getException
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
block|}
elseif|else
if|if
condition|(
name|result
operator|.
name|hasValue
argument_list|()
condition|)
block|{
name|Object
name|value
init|=
name|ProtobufUtil
operator|.
name|toObject
argument_list|(
name|result
operator|.
name|getValue
argument_list|()
argument_list|)
decl_stmt|;
if|if
condition|(
name|value
operator|instanceof
name|ClientProtos
operator|.
name|Result
condition|)
block|{
name|results
operator|.
name|add
argument_list|(
name|ProtobufUtil
operator|.
name|toResult
argument_list|(
operator|(
name|ClientProtos
operator|.
name|Result
operator|)
name|value
argument_list|)
argument_list|)
expr_stmt|;
block|}
else|else
block|{
name|results
operator|.
name|add
argument_list|(
name|value
argument_list|)
expr_stmt|;
block|}
block|}
else|else
block|{
name|results
operator|.
name|add
argument_list|(
operator|new
name|Result
argument_list|()
argument_list|)
expr_stmt|;
block|}
block|}
return|return
name|results
return|;
block|}
comment|/**    * Wrap a throwable to an action result.    *    * @param t    * @return an action result    */
specifier|public
specifier|static
name|ActionResult
name|buildActionResult
parameter_list|(
specifier|final
name|Throwable
name|t
parameter_list|)
block|{
name|ActionResult
operator|.
name|Builder
name|builder
init|=
name|ActionResult
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|NameBytesPair
operator|.
name|Builder
name|parameterBuilder
init|=
name|NameBytesPair
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|parameterBuilder
operator|.
name|setName
argument_list|(
name|t
operator|.
name|getClass
argument_list|()
operator|.
name|getName
argument_list|()
argument_list|)
expr_stmt|;
name|parameterBuilder
operator|.
name|setValue
argument_list|(
name|ByteString
operator|.
name|copyFromUtf8
argument_list|(
name|StringUtils
operator|.
name|stringifyException
argument_list|(
name|t
argument_list|)
argument_list|)
argument_list|)
expr_stmt|;
name|builder
operator|.
name|setException
argument_list|(
name|parameterBuilder
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
comment|// End utilities for Client
comment|// Start utilities for Admin
comment|/**    * Get the list of regions to flush from a RollLogWriterResponse    *    * @param proto the RollLogWriterResponse    * @return the the list of regions to flush    */
specifier|public
specifier|static
name|byte
index|[]
index|[]
name|getRegions
parameter_list|(
specifier|final
name|RollWALWriterResponse
name|proto
parameter_list|)
block|{
if|if
condition|(
name|proto
operator|==
literal|null
operator|||
name|proto
operator|.
name|getRegionToFlushCount
argument_list|()
operator|==
literal|0
condition|)
return|return
literal|null
return|;
name|List
argument_list|<
name|byte
index|[]
argument_list|>
name|regions
init|=
operator|new
name|ArrayList
argument_list|<
name|byte
index|[]
argument_list|>
argument_list|()
decl_stmt|;
for|for
control|(
name|ByteString
name|region
range|:
name|proto
operator|.
name|getRegionToFlushList
argument_list|()
control|)
block|{
name|regions
operator|.
name|add
argument_list|(
name|region
operator|.
name|toByteArray
argument_list|()
argument_list|)
expr_stmt|;
block|}
return|return
operator|(
name|byte
index|[]
index|[]
operator|)
name|regions
operator|.
name|toArray
argument_list|()
return|;
block|}
comment|/**    * Get the list of region info from a GetOnlineRegionResponse    *    * @param proto the GetOnlineRegionResponse    * @return the list of region info    */
specifier|public
specifier|static
name|List
argument_list|<
name|HRegionInfo
argument_list|>
name|getRegionInfos
parameter_list|(
specifier|final
name|GetOnlineRegionResponse
name|proto
parameter_list|)
block|{
if|if
condition|(
name|proto
operator|==
literal|null
operator|||
name|proto
operator|.
name|getRegionInfoCount
argument_list|()
operator|==
literal|0
condition|)
return|return
literal|null
return|;
name|List
argument_list|<
name|HRegionInfo
argument_list|>
name|regionInfos
init|=
operator|new
name|ArrayList
argument_list|<
name|HRegionInfo
argument_list|>
argument_list|()
decl_stmt|;
for|for
control|(
name|RegionInfo
name|regionInfo
range|:
name|proto
operator|.
name|getRegionInfoList
argument_list|()
control|)
block|{
name|regionInfos
operator|.
name|add
argument_list|(
name|ProtobufUtil
operator|.
name|toRegionInfo
argument_list|(
name|regionInfo
argument_list|)
argument_list|)
expr_stmt|;
block|}
return|return
name|regionInfos
return|;
block|}
comment|/**    * Get the region opening state from a OpenRegionResponse    *    * @param proto the OpenRegionResponse    * @return the region opening state    */
specifier|public
specifier|static
name|RegionOpeningState
name|getRegionOpeningState
parameter_list|(
specifier|final
name|OpenRegionResponse
name|proto
parameter_list|)
block|{
if|if
condition|(
name|proto
operator|==
literal|null
operator|||
name|proto
operator|.
name|getOpeningStateCount
argument_list|()
operator|!=
literal|1
condition|)
return|return
literal|null
return|;
return|return
name|RegionOpeningState
operator|.
name|valueOf
argument_list|(
name|proto
operator|.
name|getOpeningState
argument_list|(
literal|0
argument_list|)
operator|.
name|name
argument_list|()
argument_list|)
return|;
block|}
comment|/**    * Check if the region is closed from a CloseRegionResponse    *    * @param proto the CloseRegionResponse    * @return the region close state    */
specifier|public
specifier|static
name|boolean
name|isClosed
parameter_list|(
specifier|final
name|CloseRegionResponse
name|proto
parameter_list|)
block|{
if|if
condition|(
name|proto
operator|==
literal|null
operator|||
operator|!
name|proto
operator|.
name|hasClosed
argument_list|()
condition|)
return|return
literal|false
return|;
return|return
name|proto
operator|.
name|getClosed
argument_list|()
return|;
block|}
comment|// End utilities for Admin
block|}
end_class

end_unit

